--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -22,11 +22,8 @@ body {
   background: var(--bg);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
-  padding: 20px;
-  text-align: center;
+  padding: 0 35px;
 }
 
 a {
